src/test/ui/rfc-2632-const-trait-impl/call-const-trait-method-fail.stderr
error[E0277]: the trait bound `u32: Plus<Const>` is not satisfied
  --> $DIR/call-const-trait-method-fail.rs:25:7
   |
LL |     a.plus(b)
   |       ^^^^^^^ the trait `Plus<Const>` is not implemented for `u32`
   |
note: the trait `Plus<Not>` is implemented for `u32`, but that implementation is not `const`
  --> $DIR/call-const-trait-method-fail.rs:25:7
   |
LL |     a.plus(b)
   |       ^^^^^^^
   = help: the following other types implement trait `Plus<Not>`:
             <i32 as Plus<Const>>
             <u32 as Plus<Not>>

error[E0015]: cannot call non-const fn `<u32 as Plus<Const>>::plus` in constant functions
  --> $DIR/call-const-trait-method-fail.rs:25:7
   |
LL |     a.plus(b)
   |       ^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0015, E0277.
For more information about an error, try `rustc --explain E0015`.
